<resources>
    <string name="app_name">Konspirasi Snack</string>
    <string name="crash_toast_text">Crash Report</string>
    <string name="daftar">DAFTAR</string>
    <string name="email">Email</string>
    <string name="kode_pos">Kode POS</string>
    <string name="kriteria">Kriteria</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ulang_kata_sandi">Ulangi kata sandi</string>
    <string name="privacy_policy">Saya setuju dengan syarat dan ketentuan serta kebijakan privasi aplikasi.</string>
    <string name="register">Daftar</string>
    <string name="memiliki_akun">Sudah memiliki akun?</string>
    <string name="belum_memiliki">Belum memiliki akun?</string>
    <string name="masuk">Masuk</string>
    <string name="keluar">Keluar</string>
    <string name="login">Login</string>
    <string name="logout_kasir">LOGOUT KASIR</string>
    <string name="logout_aplikasi">Logout Aplikasi</string>
    <string name="verifikasi">Verifikasi</string>
    <string name="verifikasi_email">Masukan kode verifikasi yang kami kirimkan via email </string>
    <string name="lanjutkan">Lanjutkan</string>
    <string name="tidak_terima_kode">Tidak menerima kode verifikasi?</string>
    <string name="kirim_ulang">Kirim Ulang</string>
    <string name="info_usaha">Informasi Usaha</string>
    <string name="nama_anda">Nama anda</string>
    <string name="nama_usaha">Nama usaha anda</string>
    <string name="alamat">Alamat</string>
    <string name="provinsi">Provinsi</string>
    <string name="provider">Provider</string>
    <string name="pilih_provinsi">Pilih provinsi</string>
    <string name="no_telp">No. Telepon anda</string>
    <string name="nohp">No Hp</string>
    <string name="jenis_usaha">Jenis usaha</string>
    <string name="pilih_jenis_usaha">Pilih jenis usaha</string>
    <string name="kota">Kota</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="pilih_kota">Pilih kota</string>
    <string name="masukan_produk">Masukan Produk</string>
    <string name="nama_produk">Nama produk</string>
    <string name="satuan">Satuan</string>
    <string name="meja_terisi">Meja Terisi</string>
    <string name="terisi">Terisi</string>
    <string name="meja_kosong">Meja Kosong</string>
    <string name="meja">Meja</string>
    <string name="pilih_satuan">Pilih satuan</string>
    <string name="kategori_produk">Kategori produk</string>
    <string name="stok">Stok</string>
    <string name="stok_habis">Stok Habis</string>
    <string name="modal">Harga modal (Rp)</string>
    <string name="jual">Harga jual (Rp)</string>
    <string name="input_mpin">MASUKAN 6 DIGIT MPIN</string>
    <string name="default_mpin">Default MPIN (123456)</string>
    <string name="selamat_datang">Selamat datang\nkembali</string>
    <string name="selesai">Selesai</string>
    <string name="reservasi">Reservasi</string>
    <string name="kasir">Kasir</string>
    <string name="status">Status</string>
    <string name="harga">10.000</string>
    <string name="kasir_B">KASIR</string>
    <string name="penjualan_B">PENJUALAN</string>
    <string name="laporan_B">LAPORAN</string>
    <string name="absensi_B">ABSENSI</string>
    <string name="daftar_absensi">Daftar Absensi</string>
    <string name="pengaturan_B">PENGATURAN</string>
    <string name="kunci_layar_B">KUNCI LAYAR </string>
    <string name="nama_kasir">Budi Setiawan</string>
    <string name="tutup_kasir">TUTUP KASIR</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="invoice">Invoice :</string>
    <string name="numb_invoice">#20191220</string>
    <string name="no_pesanan">No. pesanan</string>
    <string name="pesanan">Pesanan</string>
    <string name="pelanggan">Pelanggan</string>
    <string name="pelanggan_2">Pelanggan :</string>
    <string name="invoice_2">Invoice :</string>
    <string name="nomor">0020</string>
    <string name="andhika">Andhika</string>
    <string name="duit">79.500</string>
    <string name="total_harga">Total harga :</string>
    <string name="total_harga_2">Total harga</string>
    <string name="total_pesanan">Total Pesanan</string>
    <string name="total_amount">Total Amount</string>
    <string name="total">Total</string>
    <string name="bayar">Bayar</string>
    <string name="order">Order</string>
    <string name="jum_orang">Jumlah Orang</string>
    <string name="jum_meja">Jumlah Meja</string>
    <string name="satu_meja">Satu Meja</string>
    <string name="gabung_meja">Gabung Meja</string>
    <string name="pilih_meja">Pilih Meja</string>
    <string name="pilih">Pilih</string>
    <string name="tersedia">Tersedia</string>
    <string name="total_item">Total Item</string>
    <string name="subtotal_produk">Subtotal produk</string>
    <string name="subtotal">Subtotal</string>
    <string name="pajak">Pajak</string>
    <string name="ppn">PPN</string>
    <string name="diskon">Diskon</string>
    <string name="date_invoice">Senin, 10 Desember 2019, 14.30 WIB</string>
    <string name="desc_kas">Uang kas yang dipegang kasir sebagai modal</string>
    <string name="kas_awal">Kas Awal</string>
    <string name="mulai">MULAI</string>
    <string name="kas_modal_awal">Kas/Modal awal</string>
    <string name="poin">Poin</string>
    <string name="lp">L/P</string>
    <string name="telepon">Telepon</string>
    <string name="simpan">Simpan</string>
    <string name="gunakan">Gunakan</string>
    <string name="detail">Detail</string>
    <string name="pelanggan_baru">Pelanggan Baru</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cari_penjualan">Cari Penjualan...</string>
    <string name="cari_pelanggan">Cari Pelanggan...</string>
    <string name="no_nota">No Nota</string>
    <string name="no_struk">No Struk</string>
    <string name="no_order">No Order</string>
    <string name="nama">Nama</string>
    <string name="nama_outlet">Nama Outlet</string>
    <string name="negara">Negara</string>
    <string name="nama_pembayaran">Nama Pembayaran</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="tanpa_pelanggan">Tanpa Pelanggan</string>
    <string name="jenis">Jenis</string>
    <string name="jenis_pembayaran">Jenis Pembayaran</string>
    <string name="jenis_stok">Jenis Stok</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="tambah_diskon">Tambah Diskon</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="kembalian">Kembalian</string>
    <string name="kembali">Kembali</string>
    <string name="pembayaran_sukses">Pembayaran Sukses</string>
    <string name="uangpas">Uang Pas</string>
    <string name="u_100">100.000</string>
    <string name="u_150">150.000</string>
    <string name="u_200">200.000</string>
    <string name="u_250">250.000</string>
    <string name="proses">Proses</string>
    <string name="posisi">Posisi</string>
    <string name="jenis_bonus">Jenis Bonus</string>
    <string name="tagihan">Tagihan</string>
    <string name="harga_2">Harga</string>
    <string name="unit">Unit</string>
    <string name="cari_produk">Cari Produk...</string>
    <string name="cari_perangkat">Cari Perangkat...</string>
    <string name="cari_kategori">Cari Kategori...</string>
    <string name="urutan">Urutan</string>
    <string name="produk_terdaftar">Produk terdaftar</string>
    <string name="pencarian">Pencarian</string>
    <string name="cari">Cari...</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="jenis_pesanan">Jenis Pesanan</string>
    <string name="ringkas_jual">Ringkasan Penjualan</string>
    <string name="komisi">Komisi</string>
    <string name="tutup_kasir_2">Tutup Kasir</string>
    <string name="kas_kasir">Kas Kasir</string>
    <string name="detail_penjualan">Detail Penjualan</string>
    <string name="produk_kategori">Produk Dan Kategori</string>
    <string name="produk">Produk</string>
    <string name="profil">Profil</string>
    <string name="profil_usaha">Profil Usaha</string>
    <string name="logo_outlet">Logo Outlet</string>
    <string name="kategori">Kategori</string>
    <string name="awal">Awal</string>
    <string name="terjual">Terjual</string>
    <string name="akhir">Akhir</string>
    <string name="nama_kategori">Nama Kategori</string>
    <string name="struk_biaya">Struk Dan Biaya</string>
    <string name="tampilan_struk">Tampilan Struk</string>
    <string name="header_footer_struk">Header Footer Struk</string>
    <string name="jumlah_cetak_struk">Jumlah Cetak Struk</string>
    <string name="jumlah">Jumlah</string>
    <string name="no_urut">No Urut</string>
    <string name="biaya">Biaya</string>
    <string name="pajak_setelah_diskon">Pajak Setelah Diskon (%)</string>
    <string name="service_charge">Service Charge (%)</string>
    <string name="service_charge_2">Pajak Service</string>
    <string name="pembulatan_pecahan_tunai">Pembulatan Pecahan Tunai (Rp)</string>
    <string name="perangkat">Perangkat</string>
    <string name="periode">Periode</string>
    <string name="pembayaran_nontunai">Pembayaran Non Tunai</string>
    <string name="karyawan">Karyawan</string>
    <string name="outlet">Outlet</string>
    <string name="koneksi">Koneksi</string>
    <string name="tipe">Tipe</string>
    <string name="durasi">Durasi</string>
    <string name="password_pin">Password Dan Pin</string>
    <string name="password">Password</string>
    <string name="pin">Pin</string>
    <string name="pin_caps">PIN</string>
    <string name="ubah">Ubah</string>
    <string name="promo">Promo</string>
    <string name="tunai">Tunai</string>
    <string name="transfer">Transfer</string>
    <string name="ewallet">E Wallet</string>
    <string name="kartu_debit">Kartu Debit</string>
    <string name="edc">EDC</string>
    <string name="note_struk">* Simulasi tampilan pada kertas struk, bukan hasil cetak sebenarnya</string>
    <string name="daftar_pelanggan">DAFTAR PELANGGAN</string>
    <string name="non_pelanggan">TANPA PELANGGAN</string>
    <string name="daftar_pesanan">Daftar Pesanan</string>
    <string name="pesanan_baru">Pesanan Baru</string>
    <string name="daftar_produk">Daftar Produk</string>
    <string name="daftar_kategori">Daftar Kategori</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="tambah_kategori">Tambah Kategori</string>
    <string name="tambah_karyawan">Tambah Karyawan</string>
    <string name="tambah_pembayaran_nontunai">Tambah Pembayaran</string>
    <string name="tambah_perangkat">Tambah Perangkat</string>
    <string name="tambah_stok">Tambah Stok</string>
    <string name="ubah_stok">Ubah Stok</string>
    <string name="edit_kategori">Update Kategori</string>
    <string name="edit">Edit</string>
    <string name="preview">Preview</string>
    <string name="toast_qty">Pilih jumlah produk yang ingin ditambahkan</string>
    <string name="toast_invalid_payment_amount">Nominal yang dibayarkan kurang</string>
    <string name="title_dialog_hapus_produk">Hapus produk</string>
    <string name="message_dialog_hapus_produk">Ingin menghapus semua produk?</string>
    <string name="message_dialog_kategori">Tuliskan Nama kategori</string>
</resources>