<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_kasir">

    <fragment
        android:id="@+id/nav_kasir"
        android:name="com.codelabs.konspirasisnack.activity.ui.home.HomeFragment"
        android:label="@string/kasir_B"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_penjualan"
        android:name="com.codelabs.konspirasisnack.activity.ui.penjualan.PenjualanFragment"
        android:label="@string/penjualan_B"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_laporan"
        android:name="com.codelabs.konspirasisnack.activity.ui.laporan.LaporanFragment"
        android:label="@string/laporan_B"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_absensi"
        android:name="com.codelabs.konspirasisnack.activity.ui.absensi.AbsensiFragment"
        android:label="@string/absensi_B"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_pengaturan"
        android:name="com.codelabs.konspirasisnack.activity.ui.pengaturan.PengaturanFragment"
        android:label="@string/pengaturan_B"
        tools:layout="@layout/fragment_share" />

<!--    <fragment-->
<!--        android:id="@+id/nav_kunci_layar"-->
<!--        android:name="com.codelabs.pos.activity.ui.send.SendFragment"-->
<!--        android:label="@string/kunci_layar_B"-->
<!--        tools:layout="@layout/fragment_send" />-->
</navigation>
