<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingSmall"
        android:layout_marginBottom="@dimen/paddingSmall"
        android:orientation="horizontal"
        android:padding="@dimen/paddingXXSmall">


        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingSmall"
            android:layout_marginLeft="@dimen/paddingXXXSmall"
            android:layout_weight="1.5"
            android:text="@string/nama"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_awal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingXXXSmall"
            android:layout_weight="1"
            android:text="@string/awal"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_masuk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingXXXSmall"
            android:layout_weight="1"
            android:text="@string/masuk"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_terjual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingXXXSmall"
            android:layout_weight="1"
            android:text="@string/terjual"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_akhir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingXXXSmall"
            android:layout_weight="1"
            android:text="@string/akhir"
            android:textColor="@color/black"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/txt_satuan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/paddingXXXSmall"
            android:layout_weight="1"
            android:text="@string/satuan"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </LinearLayout>


</LinearLayout>