<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingSmall"
        android:orientation="horizontal"
        android:padding="@dimen/paddingXXSmall">


        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/nama"

            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_kriteria"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/kriteria"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_jenis_bonus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/jenis_bonus"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_tipe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/tipe"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/txt_durasi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/durasi"
            android:textColor="@color/black" />
        <TextView
            android:id="@+id/txt_dipakai"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:text="@string/durasi"
            android:textColor="@color/black" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_darker" />

</LinearLayout>

