<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/paddingSmall"
        android:padding="@dimen/paddingXXSmall"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_nama"
            android:layout_width="0dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:text="@string/nama" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="0dp"
            android:layout_marginRight="5dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:text="@string/email" />

        <TextView
            android:id="@+id/txt_posisi"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:text="@string/posisi" />

        <TextView
            android:id="@+id/txt_outlet"
            android:layout_width="0dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/outlet" />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray_darker" />

</LinearLayout>

