<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ui.penjualan.PenjualanFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <!--Search-->
        <EditText
            android:id="@+id/txt_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/paddingSmall"
            android:layout_marginTop="@dimen/paddingSmall"
            android:layout_marginRight="@dimen/paddingSmall"
            android:backgroundTint="@android:color/transparent"
            android:drawableLeft="@drawable/ic_search"
            android:drawablePadding="@dimen/paddingSmall"
            android:hint="@string/cari_penjualan"
            android:imeOptions="flagNoExtractUi|actionSearch"
            android:singleLine="true" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_darker" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingSmall"
            android:layout_marginBottom="@dimen/paddingSmall"
            android:orientation="horizontal"
            android:padding="@dimen/paddingXXSmall">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/paddingSmall"
                android:layout_marginLeft="@dimen/paddingXXXSmall"
                android:layout_weight="1.7"
                android:textSize="12sp"
                android:text="@string/no_nota"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/texttest"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nama"
                android:textSize="12sp"
                android:layout_marginRight="@dimen/paddingXXXSmall"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/paddingXXXSmall"
                android:text="@string/waktu"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/paddingXXXSmall"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/kasir"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/jenis"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:textSize="12sp"
                android:text="@string/pembayaran"
                android:textStyle="bold" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray_darker" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/pb_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:indeterminate="true"
                android:indeterminateTint="@color/green_dark"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_data"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />


        </RelativeLayout>

    </LinearLayout>


</FrameLayout>