<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingXXLarge"
    android:paddingTop="@dimen/paddingXXXLarge"
    android:layout_marginBottom="@dimen/paddingXXXLarge"
    android:paddingRight="@dimen/paddingXXXLarge">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textStyle="bold" />

        <ImageView
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:tint="@color/black"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_menu_close_clear_cancel"/>
    </RelativeLayout>

    <View
        android:layout_width="@dimen/paddingXXXXLarge"
        android:layout_height="3dp"
        android:background="@color/green_dark" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingLarge"
        app:hintTextAppearance="@style/TextLabel"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textEmailAddress"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingLarge"
        app:hintTextAppearance="@style/TextLabel"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kata_sandi"
            android:imeOptions="flagNoExtractUi"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColorHint="@color/green_dark" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/paddingLarge"
        android:background="@color/green_dark"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/masuk"
        android:textColor="@color/white" />

</LinearLayout>
