<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/_4sdp"
            app:cardUseCompatPadding="true"
            app:cardBackgroundColor="@color/white">


            <ImageView
                android:id="@+id/img_product"
                android:layout_width="@dimen/_135sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@color/gray"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/tv_stock_product"
                android:layout_width="@dimen/_135sdp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom"
                android:text="@string/stok"
                android:background="#40000000"
                android:padding="12dp"
                android:gravity="center"
                android:textColor="@color/white"/>

        </androidx.cardview.widget.CardView>

    </FrameLayout>

    <TextView
        android:id="@+id/tv_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/nama_produk"
        android:textStyle="bold"
        android:gravity="center"
        android:textSize="@dimen/textXLarge"
        android:textColor="@android:color/black"/>
    <TextView
        android:id="@+id/tv_product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/harga"
        android:gravity="center"
        android:textSize="@dimen/textXLarge"
        android:textColor="@android:color/black"/>



</LinearLayout>